--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,52 @@
+@import url("https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: "Gilroy", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+        sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.radarAnimation::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    /* background-clip: text;
+    color: transparent; */
+    background: linear-gradient(rgba(0, 0, 0, 0), #00c000);
+
+    animation: moveScanner 5s ease-in-out infinite;
+}
+
+@keyframes moveScanner {
+    0% {
+        top: 0;
+        opacity: 1;
+    }
+
+    50% {
+        top: 100%;
+        opacity: 0;
+    }
+
+    100% {
+        top: 0;
+        opacity: 1;
+    }
 }
