--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,9 +31,10 @@ input::placeholder {
     position: absolute;
     width: 100%;
     height: 15%;
+    left: 0;
     /* background-clip: text;
     color: transparent; */
-    background: linear-gradient(rgba(0, 0, 0, 0), #00c000);
+    background: linear-gradient(rgba(0, 0, 0, 0), #00c000, rgba(0, 0, 0, 0));
 
     animation: moveScanner 5s ease-in-out infinite;
 }
