--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@ body {
     font-family: "Gilroy", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
         Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
         sans-serif;
+    scroll-behavior: smooth;
 }
 
 a {
